# chiefsplitter

./: .gitignore  Cargo.toml  README.md  SECURITY.md  idl.json
.github/workflows/: verifiable-build.yml
programs/chiefsplitter/: Cargo.toml
programs/chiefsplitter/src/: error.rs  events.rs  lib.rs  state.rs
programs/chiefsplitter/src/instructions/: close_sell_config.rs  create.rs  distribute_sol.rs  distribute_token.rs  lock_recipient.rs  mod.rs  revoke_admin.rs  set_admin.rs  set_distribution.rs  set_name.rs  set_sell_config.rs  sns_proxy.rs  swap_token.rs
scripts/: build-sbf.sh  publish-idl.sh
tests/typescript/: package-lock.json  package.json  test_splitter.ts
